[package]
name = "cargo-casper-lib"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A library to support creating and testing a Casper Wasm contract."
documentation = "https://docs.rs/cargo-casper"
homepage.workspace = true
repository.workspace = true
license.workspace = true
include = ["src/*", "Cargo.toml", "resources/*"]

[dependencies]
casper-client = "*"
casper-execution-engine = "*"
casper-storage = { git = "https://github.com/Fraser999/casper-node", branch = "local-exec" }
casper-types.workspace = true
directories.workspace = true
log.workspace = true
serde = {version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
tokio.workspace = true
toml = "0.7.6"

[dev-dependencies]
reqwest.workspace = true
serde_json.workspace = true
tempfile.workspace = true
